<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main">

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            tools:context=".login.view.LoginActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cadastro_img_perfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_icon_perfil_80"
                android:layout_gravity="center_horizontal"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/azul_claro" />

            <TextView
                android:layout_marginTop="32dp"
                style="@style/Theme.SteamRemaked.FormTextView.Titulo"
                android:text="@string/adicionar_foto_perfil"
                android:layout_gravity="center_horizontal" />

            <TextView
                style="@style/Theme.SteamRemaked.FormTextView"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:text="@string/disclaimer_foto"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal" />

            <com.example.steamremaked.ui.util.LoadingButton
                android:id="@+id/cadastro_btn_adicionarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cadastro_edt_dropdown_layout"
                app:text="@string/adicionar_foto" />

            <Button
                android:id="@+id/cadastro_btn_pular"
                android:text="@string/pular"
                android:textStyle="bold"
                style="@style/Theme.SteamRemaked.LinkButton"/>



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>