<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_main"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".login.view.LoginActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_edt_email_layout"
                style="@style/Theme.SteamRemaked.FormTextInput"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cadastro_edt_nome"
                    style="@style/Theme.SteamRemaked.FormEditText"
                    android:ems="10"
                    android:hint="@string/nome_usuario_steam"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/azul_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_edt_senha_layout"
                style="@style/Theme.SteamRemaked.FormTextInput"
                android:padding="8dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cadastro_edt_senha"
                    style="@style/Theme.SteamRemaked.FormEditText"
                    android:ems="10"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textColorHint="@color/azul_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_edt_confirmar_layout"
                style="@style/Theme.SteamRemaked.FormTextInput"
                android:padding="8dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cadastro_edt_confirmar"
                    style="@style/Theme.SteamRemaked.FormEditText"
                    android:ems="10"
                    android:hint="@string/confirmar_senha"
                    android:inputType="textPassword"
                    android:textColorHint="@color/azul_claro" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.example.steamremaked.ui.util.LoadingButton
                android:id="@+id/cadastro_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cadastro_edt_dropdown_layout"
                app:text="@string/proximo" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>