<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_main"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".login.view.LoginActivity">

            <ImageView
                android:id="@+id/cadastro_img_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/steam_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_edt_email_layout"
                style="@style/Theme.SteamRemaked.FormTextInput"
                android:layout_marginTop="32dp"
                android:padding="8dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cadastro_edt_email"
                    style="@style/Theme.SteamRemaked.FormEditText"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/azul_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_edt_dropdown_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/paisorigem"
                android:padding="8dp"
                app:hintEnabled="false"
                app:hintTextColor="@color/azul_claro"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <AutoCompleteTextView
                    android:id="@+id/cadastro_edt_dropdown"
                    style="@style/Theme.SteamRemaked.FormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_claro"
                    android:backgroundTint="@color/cinza_fundo"
                    android:drawableTint="@color/azul_claro"
                    android:foregroundTint="@color/azul_claro"
                    android:hint="@string/paisorigem"
                    android:inputType="none"
                    android:outlineAmbientShadowColor="@color/azul_claro"
                    android:outlineSpotShadowColor="@color/azul_claro"
                    android:shadowColor="@color/azul_claro"
                    android:textColorHighlight="@color/azul_claro"
                    android:textColorHint="@color/azul_claro" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.steamremaked.ui.util.LoadingButton
                android:id="@+id/cadastro_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cadastro_edt_dropdown_layout"
                app:text="@string/proximo" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>